force-app/main/default/objects/Consignment__c/Consignment__c.object-meta.xml
<CustomObject>
    <label>Consignment</label>
    <nameField>
        <label>Consignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>