force-app/main/default/objects/Consignment__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The branch to which the consignment payload was brought.</description>
    <inlineHelpText>Select the branch to which the customer has arrived with the payload.</inlineHelpText>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Consignments</relationshipLabel>
    <relationshipName>Consignments</relationshipName>
    <type>Lookup</type>
</CustomField>