force-app/main/default/objects/Consignment__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Customer who has initiated the consignment order.</description>
    <inlineHelpText>Select the Customer record to make a consignment.</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Consignments</relationshipLabel>
    <relationshipName>Consignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>