force-app/main/default/objects/Consignment__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <description>Descriptive Address of the final delivery location.</description>
    <inlineHelpText>Auto populated from selection.</inlineHelpText>
    <label>Delivery Address</label>
    <type>TextArea</type>
</CustomField>