force-app/main/default/objects/Consignment__c/fields/Delivery_Land_Mark__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Land_Mark__c</fullName>
    <description>Land mark nearby to the final delivery location.</description>
    <inlineHelpText>Auto populated from the other component.</inlineHelpText>
    <label>Delivery Land Mark</label>
    <length>128</length>
    <type>Text</type>
</CustomField>