force-app/main/default/objects/Consignment__c/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <description>Location of the destination.</description>
    <inlineHelpText>Auto populated.</inlineHelpText>
    <label>Delivery Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>