force-app/main/default/objects/Consignment__c/fields/Delivery_Lot__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Delivery Lot in which the Consignment was transported.</description>
    <inlineHelpText>Auto-fills before delivery operation.</inlineHelpText>
    <label>Delivery Lot</label>
    <referenceTo>Delivery_Lot__c</referenceTo>
    <relationshipLabel>Consignments</relationshipLabel>
    <relationshipName>Consignments</relationshipName>
    <type>Lookup</type>
</CustomField>