force-app/main/default/objects/Consignment__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment made for the consignment.</description>
    <inlineHelpText>Payment recorded for the consignment.</inlineHelpText>
    <label>Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Consignments</relationshipLabel>
    <relationshipName>Consignments</relationshipName>
    <type>Lookup</type>
</CustomField>