force-app/main/default/objects/Consignment__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the mode of delivery and its compensation.</description>
    <inlineHelpText>Select one to get the mode of delivery and its compensation.</inlineHelpText>
    <label>Price List</label>
    <referenceTo>Price_List__c</referenceTo>
    <relationshipLabel>Consignments</relationshipLabel>
    <relationshipName>Consignments</relationshipName>
    <type>Lookup</type>
</CustomField>